added some functionality

--- a/testing.html
+++ b/testing.html
@@ -9,11 +9,10 @@
         font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
         font-size: 100%;
       }
-      #status {
+      #ptest {
         /* avoid an excessively wide status text */
         white-space: pre;
         text-overflow: ellipsis;
-        overflow: hidden;
         max-width: 400px;
       }
     </style>
@@ -23,10 +22,10 @@
 <script src = "testing.js" ></script>
 </head>
 <body>
-	<div id = "status">Enter Dates and Times you aren't available.</div>
-	
+	  <div id="ptest"> Emails of coworkers/peers, separated by commas: </div> <input type="text"> <br> 
 	<button id ="btn_start" type="button">Start a new Event...</button>
-	<button id = "btn_join" type ="button">Join an existing Event... </button>
+	<button id = "btn_join" type ="button">Join an existing Event... </button> 
+
 </body>
 
 
