--- a/testing.html
+++ b/testing.html
@@ -4,16 +4,18 @@
 <head>
 
 <title>Strange Title</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
  <style>
       body {
         font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
-        font-size: 100%;
+        font-size: 150%;
       }
       #ptest {
         /* avoid an excessively wide status text */
         white-space: pre;
         text-overflow: ellipsis;
-        max-width: 400px;
+        width:300px;
+        height:20px;
       }
     </style>
 <script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js"></script>
@@ -21,9 +23,14 @@
 <script src = "jquery-1.12.0.min.js"></script>
 <script src = "testing.js" ></script>
 </head>
-<body>
-	  <div id="ptest"> Emails of coworkers/peers, separated by commas: </div> <input type="text"> <br> 
-	<button id ="btn_start" type="button">Start a new Event...</button>
+<body class="cell">
+	  <div id="ptest"> Emails of peers, separated by commas: </div> <input type="text" id="emails"> <br> 
+	<button id ="btn_start" type="button">Start a new Event...</button> <br>
+
+  <hr>
+
+  Enter your group code: <br>
+  <input type = "text" id = "code"> <br>
 	<button id = "btn_join" type ="button">Join an existing Event... </button> 
 
 </body>
