--- a/solver.html
+++ b/solver.html
@@ -1,23 +1,23 @@
 <html>
     <head>
 	<script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js"></script>
-        <script src="Solver.js">
-		
-		</script>
+        <script src="Solver.js"></script>
+		</head>
+		<body>
+			
 		<input type="text" id="input1" />
 		<input type="text" id="input2" />
 		<input type="text" id="input3" />
 		<input type="text" id="input4" />
 		<input type="text" id="input5" />
+		<input type="text" id="input6" />
+		<input type="text" id="input7" />
+		<input type="text" id="input8" />
+		<input type="text" id="input9" />
+		<input type="text" id="input10"/>
 		
 		
-
 <button onclick="myJsFunction()">Year</button>
-<button onclick="myJsFunction()">Month</button>
-<button onclick="myJsFunction()">Day</button>
-<button onclick="myJsFunction()">Hour1</button>
-<button onclick="myJsFunction()">Hour2</button>
 
-
-    </head>
+    </body>
 </html>
