aded group code frontend

--- a/later/public/index.html
+++ b/later/public/index.html
@@ -17,6 +17,8 @@
 
 <h3 class = 'well'> List your potential schedule conflicts, or log in to Google Calendar </h3>
 
+<h5> If you want to join a group, type the group code here. <input ng-model = "groupcode" type="text"> </h5>
+
 <p ng-repeat = "n in range(0,num_conflicts)">
 Schedule Conflict {{ n }}
 <br>
